[gd_scene load_steps=13 format=2]

[ext_resource path="res://Anims/walking.tres" type="Animation" id=1]
[ext_resource path="res://Anims/attack.tres" type="Animation" id=2]
[ext_resource path="res://Scripts/PatrollingAI.gd" type="Script" id=3]
[ext_resource path="res://Textures/base_face.png" type="Texture" id=4]
[ext_resource path="res://Textures/base_a_gnome.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=7]
radius = 4.5
height = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 14.0

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.34151, 1.41421 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2.795 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.017, 1.013 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "victory"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 0.8, 0.9, 1.1, 1.3, 1.5, 1.7, 1.90246 ),
"transitions": PoolRealArray( 0.0769466, 1, 1, 1, 1, 1, 0.0769466, 0.0769466, 0.0769466, 0.0769466, 0.0769466 ),
"update": 0,
"values": [ 0.0, 5.0, -5.0, -5.0, 5.0, -5.0, 0.0, 10.0, 0.0, -10.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 0.8, 0.9, 1.1, 1.3, 1.5, 1.7, 1.90246 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1, 0 ), Vector2( 1, 0 ), Vector2( 1, 0 ), Vector2( -1, 0 ), Vector2( 1, 0 ), Vector2( 0, 0 ), Vector2( 0, -3 ), Vector2( 0, 0 ), Vector2( 0, -3 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.00232, 1.00232 ), Vector2( 1.00232, 1.00232 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "die"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.6, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 2.21914, 1, 1 ),
"update": 0,
"values": [ 0.0, -11.1, 6.7, -11.1, 90.0, 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5, 0.6, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1.86607, 1.23114, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -0.647 ), Vector2( -0.063, -0.647 ), Vector2( 0, -0.647 ), Vector2( 2.538, -1.344 ), Vector2( 3.808, 1.284 ), Vector2( 5.357, 0.877 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.8, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.024, 1.037 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.6, 1.1, 1.9 ),
"transitions": PoolRealArray( 1, 0.217638, 1, 1, 4, 19.0273 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.941176, 0.0627451, 0.0627451, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ), Color( 0, 0, 0, 0.266667 ), Color( 0, 0, 0, 0 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_physics_process"
}, {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:movement_blocked")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("hitbox:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "empty"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("body:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("hitbox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "on_hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.196146, 0.196146, 0.196146 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.976471, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1, 1 ) ]
}

[node name="PatrollingAI" type="KinematicBody2D"]
scale = Vector2( 1.2, 1.2 )
script = ExtResource( 3 )

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 3 )
shape = SubResource( 7 )

[node name="body" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="skin" type="Sprite" parent="body"]
texture = ExtResource( 4 )

[node name="AttackRange" type="Area2D" parent="."]
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = ExtResource( 2 )
anims/idle = SubResource( 5 )
anims/victory = SubResource( 8 )
anims/walking = ExtResource( 1 )

[node name="EntityEffects" type="AnimationPlayer" parent="."]
anims/die = SubResource( 4 )
anims/empty = SubResource( 6 )
anims/on_hit = SubResource( 3 )

[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_AttackRange_body_exited"]
